Details
-
Bug
-
Status: Closed
-
P2: Important
-
Resolution: Done
-
Qt Creator 4.12.2
-
-
b059095f3f23f5632d2707402f0ff23e83f720e9 (qt-creator/qt-creator/master)
Description
Using "Tools > Subversion > Status of project…" will terminate the output printing the password in clear text:
The command "/usr/bin/svn status --username [USERNAME] --password [PASSWORD]" finished successfully.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-28413 Reg: Output of "Tools > Subversion > ..." prints password in clear text on Linux
-
- Closed
-
-
QTCREATORBUG-11246 Qt creator Mercurial console should not show the password
-
- Closed
-